fix(Avatar.scss): default avatar made text appear slightly too high

--- a/src/components/general/avatar/Avatar.scss
+++ b/src/components/general/avatar/Avatar.scss
@@ -10,6 +10,6 @@
 }
 
 .avatar p {
-  top: -10px;
+  top: -8px;
   position: relative;
 }
